# Autogen-MAS-planner

./: Dockerfile  main.py  pyproject.toml
template/agent/: __init__.py  agent.py  autogen_config.py
template/agent/manager/: __init__.py
template/agent/meta/: __init__.py
template/agent/plan/: __init__.py
template/agent/tool/: __init__.py  prompt.py
template/configs/: environments.py
template/router/v1/: ai.py
template/utils/: logging_utils.py
